# next-token-prediction-vision

./: .gitignore  LICENSE  evaluate.py  pyproject.toml  train.py
configs/: config.yaml  evaluate.yaml
configs/data/: cifar100.yaml  cifar100_vqvae.yaml  mnist.yaml  mnist_vqvae.yaml
configs/lit_model/: default.yaml  vqvae.yaml
configs/model/: gpt2_small.yaml
src/: lit_eval.py  lit_model.py  model.py  tokenizer.py
src/datamodules/: cifar100_datamodule.py  mnist_datamodule.py
src/next_token_prediction_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_datamodules.py  test_model.py
